<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt"
        tools:context=".MainActivity" />
    
    <EditText
        android:id="@+id/sometyping"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typehere" />
    
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/writemessage"
        android:onClick="makeToast" />

    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >
    
        <TextView
            android:id="@+id/leftSample"
            style="@style/CustomText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/listofmonths"
            android:paddingRight="20dp"
            android:text="@string/lefty"
             />
           
        <Spinner
    	android:id="@+id/listofmonths"
    	android:layout_width="100dp"
    	android:layout_height="wrap_content"
    	android:layout_alignParentRight="true"  />

        <TextView
            android:id="@+id/rightSample"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/listofmonths"
            android:layout_below="@+id/listofmonths"
            android:text="@string/righty" />
    
        </RelativeLayout>
		
</LinearLayout>
</ScrollView>
